# pdf_editor

./: .codegraphignore  .gitattributes  .gitignore  2026-03-24-235920-this-session-is-being-continued-from-a-previous-co.txt  2026-03-26-text-editing-ux-fix-plan-v2.md  2026-04-09-backlog-execution-order.md  2026-05-01-134814-local-command-caveatcaveat-the-messages-below.txt  2026-07-06-181511-local-command-caveatcaveat-the-messages-below.txt  4-problems-investigation.txt  CLAUDE.md  CODEGRAPH_REPORT.md  CODEINDEX.md  CONTRIBUTING.md  Gemini-Decouple tools from model.md  Harness_Eng.md  MANIFEST.in  PDCA_水平文字超出頁面.md  PDF-shell-operation-manual.md  PDF文字編輯技術說明.md  README.md  SECURITY.md  Surya OCR Legal and Copyright Issues.md  TODOS.html  TODOS.md  UI Specification.md  bandit-report.json  codegraph_viz.html  constraints-ci.txt  cursor_pdf_editor_project_refactoring_p.md  deep_test_report.txt  drag_move_test_report.txt  edit_reference.txt  implementation-notes.html  implementation-notes.md  issue_report.txt  launch_gui.command  main.py  memory  ocr-requirements.txt  optional-requirements.txt  (+34 more)
.claude/: settings.json  settings.local.json
.codegraph/: CODEGRAPH_REPORT.md  README.md  indexer.py  query.py  report_gen.py  viz_gen.py
0619-export-transcript/: claude_code_session_transcript.txt  commit-contexts.md  commits.md  r2.diff  session_transcript_raw.txt
appearance_design/: colors.css
controller/: __init__.py  ocr_coordinator.py  page_render_coordinator.py  pdf_controller.py  pdf_controller.py.bak  print_coordinator.py  search_coordinator.py  session_transfer.py  thumbnail_coordinator.py
desired-specs/: JakubMelka-PDF4QTs_way_to_protect_textbox.md  Stirling-PDFs_way_to_protect_textbox.md
docs/: 5-phases-of-to_Update.md  ARCHITECTURE.md  ARCHITECTURE.md.bak  FEATURES.md  Grok-No Coding Before 10am 開發模式.md  M3-Manual-Verification-Checklist-0716.md  Methodology_for_Writing_Docs.md  Methodology_for_Writing_Docs.zh-TW.md  PACKAGING.md  PITFALLS.md  PITFALLS_INDEX.md  README.md  README.zh-TW.md  code-review-findings.md  feature_conflict_test_report.txt  fusion-agent-manual.md  fusion-cli-manual.md  fusion-evaluation.md  ocr-weights-verification.md  pdf_compliance.md  pdf_standards.txt  readable-markdown.css  solutions.md  to_Update.md  unsupported-optimizer.md  架構.txt
evals/: blackbox_prompts.md  scorecard.md
model/: 1  2  __init__.py  color_profile.py  edit_commands.py  edit_requests.py  geometry.py  headless_merge.py  merge_session.py  object_requests.py  pdf_content_ops.py  pdf_model.py  pdf_object_ops.py  pdf_optimizer.py  pdf_text_edit.py  pdf_text_editor_improved.py  pdf_validator.py  text_block.py  text_block_parsing.py  text_normalization.py
pdf_editor_conversations/: chat_20251119_221838_10aa735f.md  chat_20251126_164704_6a0fb878.md  chat_20251230_130258_64647af6.md  chat_20251230_134800_5d88cb38.md  chat_20251230_135930_cfb1006a.md  chat_20260102_103541_828d3e62.md  chat_20260125_223709_e67875b7.md  chat_20260205_152844_e26886e6.md  chat_20260207_111031_1ccf82f8.md  chat_20260208_110023_fe1cc771.md  chat_20260214_233622_cfd73849.md  chat_20260222_170622_c75baec5.md  chat_20260222_230806_2d7b8540.md  chat_20260222_231652_1fb03a7b.md  chat_20260223_091831_ceae1d36.md  chat_20260223_142323_efc25a3a.md  chat_20260223_152142_d8b89487.md  chat_20260223_152510_b1ca6c1f.md  chat_20260223_175846_5a3edfe1.md  chat_20260224_091345_ac4d2066.md  chat_20260226_140548_6c1ad5e2.md
plans/: 0416-F1-Native-PDF-Image-Manipulation-(Objects-Mode).md  2026-05-05-no-jump-editor-geometry-gate.md  2026-06-13-modifications-phase-1-f1-rectangle-preview.md  2026-06-13-modifications-phase-2-page-controls.md  2026-06-13-modifications-phase-3-object-rotation.md  2026-06-13-modifications-phase-4-insert-password.md  2026-06-13-modifications-phase-5-deskew-build.md  2026-07-02-setup-optimization-baseline.md  2026-07-02-to-update-test-plan-acceptance-criteria.md  2026-07-10-m2-review-handoff.md  2026-07-10-m3-feasibility-recon.json  2026-07-12-m2-review-handoff-v2.md  2026-07-14-acrobat-parity-text-commit-engine.md  2026-07-17-m3-manual-round2-defects.md  20260610.md  address-review-findings-in-rustling-falcon.md  b1-delete-app-image-invocation-removal.md  milestone-1-ci-quality-debt.md  milestone-2-bugs-security.md  milestone-3-user-facing-features.md  phase-0-restore-gate.md  phase-1-linearize-capability-gate.md  phase-3-memory-budgets.md  phase-5-hygiene.md  r5-01-fileless-print.md  refactor-R0-baseline-freeze.md  refactor-R1-mechanical-hygiene.md  refactor-R2-mvc-boundary.md  refactor-R3-god-module-decomposition.md  refactor-R4-performance-deferrals.md  refactor-R5-security-supply-chain.md  refactor-R6-coverage-tail.md  render-offload.md
reflow/: __init__.py  diagnose_position.py  explore_test_pdfs.py  iter10_compatibility.py  iter4_overlap_audit.py  iter5_stress_test.py  iter5b_delta_debug.py  iter5c_trackB_spans.py  iter6_rawdict_debug.py  iter6b_rawdict_keys.py  iter7_perf_and_vision.py  iter8_space_fix_verify.py  iter9_edge_cases.py  reflow_agent_loop.py  run_diagnose.py  stage2_smoke_test.py  stage3_runner.py  test_suite.py  track_A_core.py  track_B_core.py  track_C_core.py  unified_command.py
reports/: 0621-refactor-state.md  2026-05-19-glyph-jump-elimination-report.md  2026-05-20-TRANSPARENT_EDITBOX_REPORT.md  2026-06-12-audit-remediation-report.md  2026-06-13-modifications-phases-1-4-implementation-report.md  F1-Native-PDF-Object-Manipulation-Report.md  REVIEW_REPORT_SURYA_OCR.md  session_report_20260401.md  ui-update-report.txt
scripts/: build_fidelity_corpus.py  build_pitfalls_index.py  calibrate_render_epsilon.py  check_completion_proof_hook.py  check_gate_passed.py  codex_session_guard.py  completion_gate.py  fusion.py  fusion_cli.py  fusion_eval.py  fusion_providers.py  fusion_runtime.py  fusion_transcripts.py  gate_anchor.py  manual_visual_edit_check.py  ux_signoff_agent.py  verify_no_jump.py  windows_file_association.ps1
security/: investigation-review.md  weakness_patch_organized.md
test_scripts/: TEST_SCRIPTS.md  _bootstrap.py  benchmark_optimize_ab.py  conftest.py  (+212 more)
(+302 files in other folders)
