[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersaga-pdf"
version = "0.1.0"
description = "CyberSagaPDF - desktop PDF editor (PySide6 + PyMuPDF, Acrobat-level UX parity)"
requires-python = ">=3.9"
# Mirrors requirements.txt (the canonical runtime list with rationale comments).
dependencies = [
    "PySide6>=6.4",
    "PyMuPDF>=1.23",
    # Pillow/numpy are imported lazily (the app launches without them) but the
    # shipped build bundles them. Pillow is floored at 12.2.0 to close the
    # image-parser CVEs (CVE-2026-40192 / 42309 / 42310 / 42311, PYSEC-2026-165).
    "Pillow>=12.2.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
# Dev tooling only. Platform/feature extras (e.g. pikepdf) stay in
# optional-requirements.txt; OCR extras stay in ocr-requirements.txt.
dev = ["build", "setuptools>=64", "wheel", "ruff", "mypy", "pytest", "pytest-cov", "import-linter"]

[tool.setuptools]
# Flat top-level layout: explicit discovery so editable install works without
# restructuring and never packages test_scripts/docs/scripts/build etc.
py-modules = ["main"]

[tool.setuptools.packages.find]
# `src` here is the namespace parent of the production package src.printing
# (it has no __init__.py by design), hence namespaces = true.
include = ["controller*", "model*", "utils*", "view*", "src*"]
namespaces = true

[tool.setuptools.package-data]
view = ["resources/*.ico", "resources/function_icons/*.png"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# Explicitly encodes ruff's DEFAULT rule set (E4/E7/E9 + F) so the lint
# baseline stays stable across ruff upgrades. Baseline: 240 violations
# (ruff 0.15.9, measured 2026-06-11). E501 is intentionally NOT selected.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
# Gradual typing: permissive global config; strictness is opted into per-module.
ignore_missing_imports = true
# A stray __init__.py in the PARENT directory ("python programs") otherwise
# makes mypy walk above the repo and fail with "not a valid Python package
# name". explicit_package_bases anchors module names at the repo root.
namespace_packages = true
explicit_package_bases = true

[tool.importlinter]
# S4 (2026-07-02): CI-enforceable form of CLAUDE.md §2's layer rules.
# model-no-controller-view and model-no-qt are blocking in CI (clean, no known
# violations). utils-no-controller-view-model and view-no-model are advisory
# until the known violations below are cleared, then flip to blocking too.
root_packages = ["model", "controller", "view", "utils"]
include_external_packages = true

[[tool.importlinter.contracts]]
id = "model-no-controller-view"
name = "Model must not import Controller or View"
type = "forbidden"
source_modules = ["model"]
forbidden_modules = ["controller", "view"]

[[tool.importlinter.contracts]]
id = "utils-no-controller-view-model"
name = "Utils must not import Controller, View, or Model"
type = "forbidden"
source_modules = ["utils"]
forbidden_modules = ["controller", "view", "model"]

[[tool.importlinter.contracts]]
id = "model-no-qt"
name = "Model stays Qt-free (never imports PySide6)"
type = "forbidden"
source_modules = ["model"]
forbidden_modules = ["PySide6"]
# utils is allowed PySide6.QtCore/QtNetwork (e.g. single_instance.py's lock
# file); the narrower "utils must not import QtWidgets" rule is CI-enforced
# via grep in ci.yml because import-linter can't forbid an external
# package's submodule. KNOWN VIOLATION (tracked in TODOS.md):
# utils/helpers.py imports QMessageBox.

[[tool.importlinter.contracts]]
id = "view-no-model"
name = "View must not import Model directly (signals only)"
type = "forbidden"
source_modules = ["view"]
forbidden_modules = ["model"]
# KNOWN VIOLATIONS (tracked in TODOS.md): view/dialogs/{audit,ocr,optimize}.py,
# view/object_selection.py, view/pdf_view.py, view/text_editing.py import
# model types/functions directly. Some are DTO/type imports (arguably fine);
# view/dialogs/optimize.py calling PDFModel.preset_optimize_options() and
# view/dialogs/ocr.py calling is_device_available() are real boundary crossings.

[tool.pytest.ini_options]
testpaths = ["test_scripts"]

[tool.coverage.run]
# R6.3 (2026-06-18): coverage scoped to the three production layers the R-series
# campaign hardened. Pinning `source` here means `pytest --cov` (no explicit
# targets) measures exactly model/ + controller/ + view/, matching the R0.5
# baseline methodology.
source = ["model", "controller", "view"]
branch = false

[tool.coverage.report]
# R6.3 coverage FLOOR, set AT-OR-BELOW the measured baseline so it catches a real
# regression without blocking unrelated PRs on a sub-percent dip. Measured combined
# TOTAL = 78.7% on 2026-06-18 (15082 stmts / 3206 missed; 1443 passed / 20 skipped
# under .venv); R0.5 baseline was 78.0% (model 79.2 / controller 78.8 / view 76.6).
# 75 leaves ~3.7% headroom. RATCHET UPWARD only in a separate PR — never set above
# the value measured here, or the campaign's own merges would be blocked.
# Enforced ONLY on explicit `--cov` runs; plain `pytest` (incl. the no-jump gate's
# full-suite step) collects no coverage and is therefore unaffected.
fail_under = 75
# Canonical local command (the .venv is the coverage authority — see refactor-state.md):
#   .venv\Scripts\python.exe -m pytest test_scripts/ --cov --cov-report=term-missing
